Upcoming release:

(r5375) Fixed: when DICOM files have fractional rescale slope, read image as
        floating point, not integer.
(r5375) Fixed: "dcm2image" tool did not respect command line options to ignore
        acquisition number tags and disable orientation checks.
(r5374) Fixed: bashisms in two scripts.


Release CMTK-3.2.2 (2014-08-01):

(r5368) Fixed: XformList::ApplyInPlace terminated concatenation when an
	inverted B-spline FFD transformation was encountered.
(r5365) Fixed: binary VTK files were previously written (illegally) as
	double-precision data.
(r5353) Fixed: wrong binary paths in munger.pl script


Release CMTK-3.2.1 (2014-06-19):

(r5355) Added: ADNI phantom detection and quantification (exposed via the
	"detect_adni_phantom" tool) now computes maximum dimming, i.e.,
	minimum intensity of a 10mm sphere relative to the 90th percentile
	of intensities over all such spheres.
(r5353) Added: global scale factor support in "vol2csv" tool
(r5347) Fixed: missing coordinate information in Siemens mosaic files must
	be treated as zero.


Release CMTK-3.2.0 (2014-05-01):

(r5344) Added: manually force CNR centroid fallback in
	"detect_adni_phantom" tool.
(r5340) Packaging: RPM distribution now split into "core" (binaries) and
	"devel" (libraries and headers)	packages.
(r5340) Packaging: TGZ packages no longer include "CMTK-M.m.p/" release
	name prefix for stored files.
(r5337) Added: CMTK_BINARY_DIR and CMTK_LIRBARY_DIR as used in a number of
	shell scripts included with CMTK can now be overridden by setting
	them before executing one such script. This should allow CMTK to
	work when it was installed/unpacked into a path other than the
	installation path defined during build.
(r5333) Added: "epiunwarp" now has optional sixth positional parameter to
	export reverse deformation field to a given path.
(r5327) Added: time units are now written to XML sidecar files for TR, TE,
	TI, and dwell time.